--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,10 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+# after building
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+# Publish to Pipeline 
+- task: PublishBuildArtifacts@1
