--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,18 @@ steps:
 # Publish to Pipeline 
 - script: dotnet publish --output $(Build.ArtifactStagingDirectory)
 - task: PublishBuildArtifacts@1
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+steps:
+# ...
+# do this after you've built your app, near the end of your pipeline in most cases
+# for example, you do this before you deploy to an Azure web app on Windows
+- task: AzureRmWebAppDeployment@3
+  inputs:
+    azureSubscription: 'd478e6da-befc-4aa0-9ea2-ff28154b9dc8'
+    WebAppName: 'myAppServicePlan (B1: 1)'
+    Package: $(Build.ArtifactStagingDirectory)/**/*.zip
